# FS-Security

./: .gitignore  GEOIDFQs.py  README.md  acs_year.py  censusAPI.py  cleaningData.py  collapseData.py  dashInteraction.py  imageListGenerator.py  insec_households.py  main.py  mapCreation.py  pyproject.toml  requirements.txt  subCouInfo.py  test.py  total_calories.py  update_data.py  verifyCountyInfo.py  verifyFile.py
.github/workflows/: run_module.yml
data/: Calorias por edad.xlsx  calsPorSubbarrio.xlsx
data/dimensions/: filtered_land_coordinates.dbf  filtered_land_coordinates.shx
data/food/: inseguridad por barrio 2022 data.xlsx
data/live_data/: 2010households.csv  2010popPerSubCou.csv  2011households.csv  2011popPerSubCou.csv  2012households.csv  2012popPerSubCou.csv  2013households.csv  2013popPerSubCou.csv  2014households.csv  2014popPerSubCou.csv  2015households.csv  2015popPerSubCou.csv  2016households.csv  2016popPerSubCou.csv  2017households.csv  2017popPerSubCou.csv  2018households.csv  2018popPerSubCou.csv  2019households.csv  2019popPerSubCou.csv  2021households.csv  2021popPerSubCou.csv  2022households.csv  2022popPerSubCou.csv  2023households.csv  2023popPerSubCou.csv  popPerSubCou.csv
data/processed/: popPerSubCou.csv
data/raw/: Calorias por edad.xlsx  food_access.xlsx
notebooks/: data_process.qmd
src/: dashInteraction.py  imageListGenerator.py  mapCreation.py  verifyCountyInfo.py
src/data/: data_process.py  data_pull.py
