[project]
name = "fs-security"
authors = [{ name = "", email = "temp@example.com" }]
maintainers = [
  { name = "Alejandro Ouslan", email = "alejandro.ouslan@upr.edu" },
]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.2",
    "geopandas>=1.0.1",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
    "plotly>=5.24.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
